# showface

./: .gitignore  CMakeLists.txt  cli.cpp  faceloader.cpp  faceloader.h  loader.cpp  loader.h  main.cpp  main.qml  result.cpp  result.h
scripts/: Dockerfile  Makefile  build.sh  build_script.sh
